--- a/templates/base.html
+++ b/templates/base.html
@@ -89,7 +89,7 @@
       }
     </style>
 </head>
-<body class="site-bg text-white m-0 p-0">
+<body class="site-bg text-white m-0 p-0 overflow-x-hidden">
 
 <!-- Navigation Bar -->
 <header>
