--- a/templates/base.html
+++ b/templates/base.html
@@ -137,6 +137,10 @@
         </a>
       {% endif %}
       {% if user.is_authenticated %}
+        <a href="{% url 'profile_view' user.username %}" class="flex flex-col items-center group float-on-hover">
+          <i class="fa-solid fa-user text-white text-xl group-hover:text-orange-300 transition"></i>
+          <span class="text-xs text-white opacity-80 group-hover:opacity-100">Profile</span>
+        </a>
         <a href="{% url 'logout' %}" class="flex flex-col items-center group float-on-hover">
           <i class="fa-solid fa-right-from-bracket text-white text-xl group-hover:text-orange-300 transition"></i>
           <span class="text-xs text-white opacity-80 group-hover:opacity-100">Logout</span>
